# Sha8lny

./: .env.example  .gitignore  AGENTS.md  API_SPECIFICATION.md  BACKEND_ARCHITECTURE_README.md  BACKEND_REQUIREMENTS.md  CLAUDE.md  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  ERD.vpd  ERD_visualParadigm.vpd  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  LEGACY_BRANCHES.md  README.md  SRS_GAP_ANALYSIS.md  SYSTEM_ARCHITECTURE.md  THESIS_GUIDE.md  context.md  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
ai-models/: .env.example  .gitignore  AI_MODELS_PLAN.md  CLAUDE.md  FULL_CUSTOM_ML_GUIDE.md  README.md  pyproject.toml  requirements.txt  test_vector_db.py
ai-models/config/: settings.py
ai-models/data/: CITATIONS.md  job_ranker_training.json
ai-models/data/courses/: README.md  build_course_catalog.py  coursera_career_courses.json
ai-models/data/eval/: faithfulness_pilot.json  (+1 more)
ai-models/docs/: OLLAMA_SETUP.md
ai-models/scripts/: analyze_expert_review.py  download_models.sh  eval_faithfulness.py  fetch_corpus_sources.py  generate_eval_charts.py  run_retrieval_eval.py  stress_test_retrieval.py  train_job_ranker.py  validate_corpus.py
ai-models/src/: __init__.py
ai-models/tests/: conftest.py  test_chunking.py  test_corpus_validation.py  test_credibility.py  test_eval_matching.py  test_eval_metrics.py  test_eval_set_schema.py  test_expert_review_analysis.py  test_faithfulness.py  test_hybrid_search.py  test_model_loading.py  test_ranker_eval.py  test_reranker.py  test_retriever_contract.py  test_retriever_hybrid.py
(+587 files in other folders)
